# kg-tree

./: .gitignore  .travis.yml  Cargo.toml  README.md
doc/: doc.md
src/: doc.md  lib.rs
src/diff/: distance.rs  mod.rs  opts.rs
src/opath/: cache.rs  interpolation.rs  matcher.rs  mod.rs  opath.rs  resolve.rs
src/opath/expr/: func.rs  mod.rs  scope.rs
src/opath/expr/parse/: mod.rs
src/opath/expr/parse/tests/: comp_operators.rs  errors.rs  filtering.rs  indexing.rs  literals.rs  logical_operators.rs  math_operators.rs  mod.rs  number_ranges.rs  operator_precedence.rs  prop_access.rs
src/serial/: de.rs  error.rs  mod.rs  ser.rs
src/serial/fmt/: json.rs  mod.rs  toml.rs  yaml.rs
src/tree/: convert.rs  metadata.rs  mod.rs  node.rs
tests/: tests_root.rs
tests/tests/: attrs.rs  convert.rs  mod.rs  number_ranges.rs  prop_access.rs
tests/tests/bool_ops/: logical.rs  mod.rs
tests/tests/common/: mod.rs
tests/tests/math_ops/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  sub.rs
tests/tests/opath/: attrs.rs  convert.rs  mod.rs  prop_access.rs
tests/tests/opath/bool_ops/: comparison.rs  mod.rs
tests/tests/opath/expr/: func.rs  mod.rs
tests/tests/opath/math_ops/: add.rs  mod.rs  neg.rs
tests/tests/serial/: json.rs  mod.rs  toml.rs  yaml.rs
