[package]
name = "kg-tree"
version = "0.2.0"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Generic object tree with Opath query language, similar to XPath.
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-tree"
edition = "2018"

[workspace]

[dependencies]
kg-display = "0.1.2"
kg-display-derive = "0.1.1"
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-utils = "0.3.1"
kg-symbol = "0.1.10"
lazy_static = "1.4.0"
backtrace = "0.3.37"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
serde_yaml = "0.8.9"
toml = "0.5.3"
heapsize = "0.4.2"
regex = "1.3.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
tempfile = "3.1.0"
pretty_assertions = "0.6.1"
