[package]
name = "kg-tree"
version = "0.2.1"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Generic object tree with Opath query language, similar to XPath.
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-tree"
edition = "2018"

[workspace]

[dependencies]
kg-display = "0.1.2"
kg-display-derive = "0.1.1"
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-utils = "0.4.0"
kg-symbol = "0.2.0"
lazy_static = "1.4.0"
backtrace = "0.3.60"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"
heapsize = "0.4.2"
regex = "1.5.4"

[dev-dependencies]
assert_approx_eq = "1.1.0"
tempfile = "3.2.0"
pretty_assertions = "0.7.2"
